<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"


    android:orientation="vertical"
    tools:context="com.example.labredes.manillas.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/material"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <RadioButton
            android:id="@+id/scuero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/check_cuero"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="7dp"
            tools:layout_editor_absoluteY="83dp" />

        <RadioButton
            android:id="@+id/scuerda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/check_cuerda"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="7dp"
            tools:layout_editor_absoluteY="51dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="415dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/dijen"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <RadioButton
            android:id="@+id/smartillo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/check_martillo"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/sancla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/check_ancla"
            android:textSize="16sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/tipo_dijen"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <RadioButton
            android:id="@+id/soro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/check_oro"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/splata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/check_plata"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/sniquel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/check_niquel"
            android:textSize="16sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/moneda"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="216dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <RadioButton
            android:id="@+id/susd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/dolar"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/scop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/pesos"
            android:textSize="16sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/cantidad"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtcantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="true"
            android:fontFamily="sans-serif-condensed"
            android:inputType="number" />

    </LinearLayout>

    <Button
        android:id="@+id/stotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-condensed"
        android:onClick="calcular"
        android:text="@string/calcular"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtresultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/txtmostrar"
        android:textSize="18sp" />

</LinearLayout>


